remctl (1.12-1) unstable; urgency=low

  * New upstream release.
    - Fix memory initialization bug in remctld configuration parsing.

 -- Russ Allbery <rra@debian.org>  Sun,  1 Jan 2006 21:19:13 -0800

remctl (1.11-1) unstable; urgency=low

  * New upstream version.
    - remctl stops parsing arguments at the first non-option to make it
      easier to pass options to remote programs.
    - Include example of how to use remctl like rsh.  Thanks, Romain
      LENGLET.
    - Support include in ACL files.  (Closes: #309418)

 -- Russ Allbery <rra@debian.org>  Thu, 22 Dec 2005 16:43:59 -0800

remctl (1.10-1) unstable; urgency=low

  * New upstream version.
    - The -v verbose option is now -d (debug) for remctl and remctld.
    - Better and cleaner error reporting and logging.
    - Support linking with only the shared libraries called directly and
      relying on the shared libraries to pull in their own dependencies,
      reducing unnecessary package dependencies.
  * Build separate remctl-server and remctl-client packages (with a remctl
    transitional package for upgrades).
  * remctl-server now enables remctld by default.
  * Run remctld under tcpd and depend on tcpd.
  * Use a better method to optionally run make distclean.
  * Remove unused targets in debian/rules.
  * Use recommended indentation of Homepage link in long description.
  * Update copyright to my current format, remove the confusing clause
    about export that was removed from the upstream license, and add an
    explicit packaging copyright and license.
  * Update maintainer address.
  * Update standards version to 3.6.2 (no changes required).

 -- Russ Allbery <rra@debian.org>  Thu,  1 Dec 2005 17:26:08 -0800

remctl (1.9-1) unstable; urgency=high

  * New upstream release.
    - Fix serious bug when including directories of configuration files.

 -- Russ Allbery <rra@stanford.edu>  Tue, 10 May 2005 21:37:12 -0700

remctl (1.8-2) unstable; urgency=low
